--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/main.js",
-    "build": "npm run build"
+    "start": "nodemon ./src/main.js"
   },
   "keywords": [],
   "author": "",
